fix: avoid jumping content

--- a/packages/elements/src/components/ino-popover/ino-popover.scss
+++ b/packages/elements/src/components/ino-popover/ino-popover.scss
@@ -3,6 +3,8 @@
 @use 'base/theme';
 
 ino-popover {
+  display: none;
+
   //default color scheme
   @include tooltip-mixins.tooltip(
     theme.color(primary, light),
